--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 			<div class="container clearfix">
 				<div id="backgroundwords">
 					<div>	
-					<p>we are</p>
-					<p>the band</p>
+					<p>Audio</p>
+					<p>Experience</p>
 					</div>	
 				</div>
 			</div>
@@ -50,8 +50,8 @@
 							<tr><td><div class="names">Mitch Mitchell</div></td><td><img src="img/Ellipse.png" alt=""></td><td>drums</td></tr>
 						</table>
 					</div>
-					<h2>Meet our band</h2>
-					<p>Court Sheard, swag iPhone neutra williamsburg, sriracha you probably haven't heard of them PBR&B marfa seitan. Four dollar toast wayfarers helvetica etsy, affogato pinterest schlitz. Squid yr mlkshk, pinterest pour-over polaroid photo booth. Yr fixie plaid kogi.</p>
+					<h2>Meet the band</h2>
+					<p>Widely recognized as hugely influential in the development of the hard and psychedelic rock genres during the late 1960s and beyond, the Jimi Hendrix Experience was best known for the skill, style and charisma of their frontman, Hendrix, who has since been called one of the greatest guitarists of all time</p>
 				</div>
 			</div>
 		</div>
@@ -101,7 +101,7 @@
 					<div id="tracklist1" class="tracklist">
 						<h3>Axis: Bold As Love</h3>
 						<ul class="tracks">
-								<li><img class="playable" src="img/Play-small.png" onclick="trackSrc('music/BoldAsLove.mp3', 'Axis: Bold As Love', '01. Bold As Love')" alt=""><a class="playable">01. Bold As Love</a></li>
+								<li><img src="img/Play-small-light.png" alt=""><a>01. EXP</a></li>
 								<li><img src="img/Play-small-light.png"><a>02. Up From The Skies</a></li>
 								<li><img src="img/Play-small-light.png" alt=""><a>03. Spanish Castle Magic</a></li>
 								<li><img src="img/Play-small-light.png" alt=""><a>04. Wait Until Tomorrow</a></li>
@@ -115,30 +115,30 @@
 					<div id="tracklist2" class="tracklist">
 						<h3>Kiss The Sky</h3>
 						<ul class="tracks">
-								<li><img class="playable" src="img/Play-small.png" onclick="trackSrc('music/LittleWing.mp3', 'Kiss The Sky', '01. Little Wing')" alt=""><a class="playable">01. Little Wing</a></li>
-								<li><img class="playable" src="img/Play-small.png" onclick="trackSrc('music/CastlesMadeOfSand.mp3', 'Kiss The Sky', '02. Castles Made of Sand')" alt=""><a class="playable">02. Castles Made of Sand</a></li>
-								<li><img class="playable" src="img/Play-small.png" onclick="trackSrc('music/BoldAsLove.mp3', 'Kiss The Sky', '03. Bold As Love')" alt=""><a class="playable">03. Bold As Love</a></li>
+								<li><img src="img/Play-small-light.png" alt=""><a>01. Are You Experienced?</a></li>
+								<li><img src="img/Play-small-light.png"alt=""><a>02. I Don't Live Today</a></li>
+								<li><img src="img/Play-small-light.png"alt=""><a>03. Voodoo Child</a></li>
 								<li><img src="img/Play-small-light.png" alt=""><a>04. Stepping Stone</a></li>
-								<li><img class="playable" src="img/Play-small.png" onclick="trackSrc('music/BornUnder.mp3', 'Kiss The Sky', '05. Born Under A Bad Sign')" alt=""><a class="playable">05. Born Under A Bad Sign</a></li>
+								<li><img class="playable" src="img/Play-small.png" onclick="trackSrc('music/CastlesMadeOfSand.mp3', 'Kiss The Sky', '05. Castles Made of Sand')" alt=""><a class="playable">05. Castles Made of Sand</a></li>
 								<li><img src="img/Play-small-light.png" alt=""><a>06. Killing Floor</a></li>
-								<li><img class="playable" src="img/Play-small.png" onclick="trackSrc('music/CanYouSeeMe.mp3', 'Kiss The Sky', '07. Can You See Me')" alt=""><a class="playable">07. Can You See Me</a></li>
+								<li><img src="img/Play-small-light.png" alt=""><a>07. Purple Haze</a></li>
 								<li><img src="img/Play-small-light.png" alt=""><a>08. Red House</a></li>
-								<li><img class="playable" src="img/Play-small.png" onclick="trackSrc('music/Angel.mp3', 'Kiss The Sky', '09. Angel')" alt=""><a class="playable">09. Angel</a></li>
+								<li><img  src="img/Play-small-light.png" alt=""><a>09. Crosstown Traffic</a></li>
 								
 						</ul>	
 					</div>	
 					<div id="tracklist3" class="tracklist">
 						<h3>Electric Ladyland</h3>
 						<ul class="tracks">
-								<li><img src="img/Play-small-light.png" alt=""><a>01. Suite IV Electric Overture</a></li>
-								<li><img src="img/Play-small-light.png"><a>02. Givin Em What They Love</a></li>
-								<li><img src="img/Play-small-light.png" alt=""><a>03. Q.U.E.E.N.</a></li>
-								<li><img src="img/Play-small-light.png" alt=""><a>04. Electric Lady</a></li>
-								<li><img class="playable" src="img/Play-small.png" onclick="trackSrc('music/AllAlongTheWatchtower.mp3', 'Electric Ladyland', '05. All Along The Watchtower')" alt=""><a class="playable">05. All Along The Watchtower</a></li>
-								<li><img src="img/Play-small-light.png" alt=""><a>06. Primetime</a></li>
-								<li><img src="img/Play-small-light.png" alt=""><a>07. We Were Rock&Roll</a></li>
-								<li><img src="img/Play-small-light.png" alt=""><a>08. The Chrome Shoppe</a></li>
-								<li><img src="img/Play-small-light.png" alt=""><a>09. Dance Apocalyptic</a></li>
+								<li><img src="img/Play-small-light.png" alt=""><a>01. And the Gods Made Love</a></li>
+								<li><img src="img/Play-small-light.png"><a>02. Have You Ever Been </a></li>
+								<li><img src="img/Play-small-light.png" alt=""><a>03. Crosstown Traffic</a></li>
+								<li><img src="img/Play-small-light.png" alt=""><a>04. Voodoo Chile</a></li>
+								<li><img class="playable" src="img/Play-small.png" onclick="trackSrc('music/LittleMissStrange.mp3', 'Electric Ladyland', '05. Little Miss Strange')" alt=""><a class="playable">05. Little Miss Strange</a></li>
+								<li><img src="img/Play-small-light.png" alt=""><a>06. Long Hot Summer Night</a></li>
+								<li><img src="img/Play-small-light.png" alt=""><a>07. Come On</a></li>
+								<li><img src="img/Play-small-light.png" alt=""><a>08. Gypsy Eyes</a></li>
+								<li><img src="img/Play-small-light.png" alt=""><a>09. Burning of the Midnight Lamp</a></li>
 						</ul>	
 					</div>	
 					<div id="tracklist4" class="tracklist">
@@ -147,12 +147,12 @@
 								<li><img src="img/Play-small-light.png"><a>01. Foxey Lady</a></li>
 								<li><img src="img/Play-small-light.png"><a>02. Maniac Depression</a></li>
 								<li><img src="img/Play-small-light.png" alt=""><a>03. Red House</a></li>
-								<li><img src="img/Play-small-light.png" alt=""><a>04. Can You See Me</a></li>
+								<li><img class="playable" src="img/Play-small.png" onclick="trackSrc('music/CanYouSeeMe.mp3', 'Electric Ladyland', '04. Can You See Me')" alt=""><a class="playable">04. Can You See Me</a></li>
 								<li><img src="img/Play-small-light.png" alt=""><a>05. Love Or Confusion</a></li>
 								<li><img src="img/Play-small-light.png" alt=""><a>06. I Don't Live Today</a></li>
 								<li><img src="img/Play-small-light.png" alt=""><a>07. May this be love</a></li>
-								<li><img src="img/Play-small-light.png" alt=""><a>08. Bleeding Heart</a></li>
-								<li><img class="playable" src="img/Play-small.png" onclick="trackSrc('music/AllAlongTheWatchtower.mp3', 'Electric Ladyland', '09. All Along The Watchtower')" alt=""><a class="playable">09. All Along The Watchtower</a></li>
+								<li><img src="img/Play-small-light.png" alt=""><a>08. Fire</a></li>
+								<li><img src="img/Play-small-light.png" alt=""><a>09. Third Stone from the Sun</a></li>
 						</ul>	
 					</div>	
 				</div>
