--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="container clearfix">
 				<div id="backgroundwords">
 					<div>	
-					<p>Audio</p>
+					<p>Jimi's</p>
 					<p>Experience</p>
 					</div>	
 				</div>
